<resources>
    <string name="app_name" translatable="false">Simpler</string>
    <string name="icon_credits" translatable="false">Icons made by Freepik, bqlqn, photo3idea_studio, Pixel perfect, ultimatearm, Vitaly Gorbachev,monkik &amp; Kiranshastry from www.flaticon.com</string>
    <string name="btn_finish">Finish</string>
    <string name="btn_add_another_action">Add Another Action</string>
    <string name="field_reminder_name">Reminder Name</string>
    <string name="btn_once_only">One-Time Activation</string>
    <string name="btn_next">Next</string>
    <string name="reminder_reset">Long-press to set reminder ready</string>
    <string name="field_notification_text">Notification Text</string>
    <string name="tv_color_of_notif">Color of Notification</string>
    <string name="tv_whats_toast">What is a Toast?</string>
    <string name="tv_toast_info">Toast is a simple text notification that appears on the bottom part of the screen for few seconds.\nPress the button to try it!</string>
    <string name="field_toast_text">Text</string>
    <string name="btn_toast_duration">Duration</string>
    <string name="btn_toast_shorter">Shorter</string>
    <string name="btn_toast_longer">Longer</string>
    <string name="btn_try_toast">Try It</string>
    <string name="field_email_to">To</string>
    <string name="field_subject">Subject</string>
    <string name="field_content">Content</string>
    <string name="tv_email_tip_tip">TIP:</string>
    <string name="tv_email_tip_content">You can leave some of the fields empty for now and fill them before sending.</string>
    <string name="field_phone_to">To</string>
    <string name="field_phone_to_exp">One or less phone numbers</string>
    <string name="tv_bt_activation">Bluetooth Based Activation</string>
    <string name="tv_at_con">At Connection</string>
    <string name="tv_at_dis">At Disconnection</string>
    <string name="tv_device">Device</string>
    <string name="tv_bt_turn_on">Please turn on bluetooth to see list of devices</string>
    <string name="field_search_a_place">Search a Place</string>

    <string-array name="spinner_radius_options">
        <item>50</item>
        <item>100</item>
        <item>250</item>
        <item>500</item>
        <item>1000</item>
        <item>5000</item>
    </string-array>
    <string name="tv_location_activation">Location Based Activation</string>
    <string name="tv_activation_radius">Activation Radius (m)</string>
    <string name="action_email">Send Email</string>
    <string name="tv_location">Location</string>
    <string name="tv_meters">m</string>
    <string name="action_notification">Show Notification</string>
    <string name="tv_trigger">Trigger</string>
    <string name="tv_actions">Actions</string>
    <string name="action_toast">Toast</string>
    <string name="action_waze">Waze Navigation</string>
    <string name="tv_destination">Destination of Navigation</string>
    <string name="action_whatsapp">WhatsApp Message</string>
    <string name="btn_flip_order">Flip Order</string>
    <string name="menu_add_task">Create Reminder</string>
    <string name="menu_sort_by">Sort List By</string>
    <string name="menu_date">Creation Time</string>
    <string name="menu_name">Name</string>
    <string name="menu_status">Status</string>
    <string name="menu_activation">Trigger Type</string>
    <string name="prop_once_only">One-Time Activation</string>
    <string name="prop_done">Done</string>
    <string name="prop_ready">Ready</string>
    <string name="prop_reusable">Mutlitple-Occurrence</string>
    <string name="main_snack_removed">The reminder %1$s has been removed.</string>
    <string name="main_cancel">Cancel</string>
    <string name="main_snack_unremoved">The reminder %1$s  has been added back.</string>
    <string name="main_positive_remove">Yes, Remove</string>
    <string name="main_title_remove">Reminder Deletion</string>
    <string name="main_content_remove">Sure that you want to delete this reminder?</string>
    <string name="main_snack_new">A reminder name %1$s has been added successfully.</string>
    <string name="notif_choose_color">Choose a color for the notification</string>
    <string name="tab_bt">Bluetooth</string>
    <string name="tab_location">Location</string>
    <string name="trigger_no_check_err">At least one checkbox have to be checked</string>
    <string name="trigger_no_device_err">Pick a bluetooth device</string>
    <string name="trigger_no_location_err">Please choose a location of activation</string>
    <string name="contact_chooser">Choose contact with...</string>
    <string name="action_type_title">What kind of action will the reminder do for you?</string>
    <string name="no_name_err">Don\'t forget to give the reminder a name</string>
    <string name="service_no_more_tasks">No more reminders to look for</string>
    <string name="service_notif_sub">Location Activation</string>
    <string name="service_notif_title">Getting Location Updates...</string>
    <string name="service_notif_content">Looking for: %1$s</string>
    <string name="tv_location_of_activation">Location of Activation</string>
    <string name="email_notif_content">To: %1$s About: %2$s</string>
    <string name="email_notif_title">Click to send Email</string>
    <string name="notif_reminder_activated">Reminder Activated</string>
    <string name="notif_action_text">The reminder %1$s just got activated</string>
    <string name="waze_notif_text">Destination: %1$s</string>
    <string name="waze_notif_click_to_navigate">Click to Navigate with Waze</string>
    <string name="wa_click_to_send">Click to send message via WhatsApp</string>
    <string name="service_notif_need_persmission_text">Please enable location permission in settings to activate reminders</string>
    <string name="service_notif_need_permission_title">Location Permission Required</string>
    <string name="service_stop">STOP</string>
    <string name="menu_about">About</string>
    <string name="dialog_close">Close</string>
    <string name="about_info">This app was made by Alon Ben Dov. It is free to use and ads-free.</string>
    <string name="about_contact">Find me @alonbendov on instagram.</string>
    <string name="about_pre_credits">Credits for icon creators from flaticon.com:</string>
    <string name="permission_ask_txt">Permission is required for reminders that activate according to your location.</string>
    <string name="permission_ask_btn">Give Permission</string>
    <string name="permission_ask_failed_toast">Please try again. Failed to get the permission.</string>
    <string name="cooldown_message">At distance of %1$d the cooldown will end.</string>
    <string name="prop_cooldown">In Cooldown</string>

</resources>
