<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginEnd="15dp"
            android:src="@drawable/ic_bluetooth" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-black"
            android:text="@string/tv_bt_activation"
            android:textColor="#444"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:padding="2dp"
            android:text="@string/tv_device"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/device_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:fontFamily="sans-serif-medium"
            android:padding="2dp"
            android:textColor="#444"
            android:textSize="20sp" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/con_cb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:enabled="false"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/tv_at_con"
        android:textColor="#616161"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/dis_cb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:enabled="false"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/tv_at_dis"
        android:textColor="#616161"
        android:textSize="20sp" />
</LinearLayout>