<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/to_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/field_email_to"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20sp"
        app:boxCornerRadiusTopStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_add_contact">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/to_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/field_subject"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20sp"
        app:boxCornerRadiusTopStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/subject_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailSubject"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/field_content"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20sp"
        app:boxCornerRadiusTopStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/content_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textMultiLine"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:fontFamily="sans-serif-medium"
            android:textColor="#444"
            android:text="@string/tv_email_tip_tip" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:fontFamily="sans-serif-light"
            android:textColor="#444"
            android:padding="3dp"
            android:text="@string/tv_email_tip_content" />
    </LinearLayout>
    <ImageView
        android:id="@+id/plane_iv"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_paper_plane"
        android:rotation="25" />

</LinearLayout>