<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">
    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_gravity="center"
        android:layout_marginEnd="15dp"
        android:src="@drawable/ic_toast" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-black"
        android:text="@string/action_toast"
        android:textColor="#444"
        android:textSize="25sp"
        android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:padding="2dp"
            android:text="@string/field_toast_text"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:fontFamily="sans-serif-medium"
            android:padding="2dp"
            android:textColor="#444"
            android:textSize="20sp" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:fontFamily="sans-serif-condensed-medium"
            android:padding="2dp"
            android:text="@string/btn_toast_duration"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/shorter_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:fontFamily="sans-serif-medium"
                android:padding="2dp"
                android:text="@string/btn_toast_shorter"
                android:textColor="#444"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|start"
                android:fontFamily="sans-serif-condensed-medium"
                android:padding="2dp"
                android:text="/"
                android:textSize="20sp"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/longer_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:fontFamily="sans-serif-medium"
                android:padding="2dp"
                android:text="@string/btn_toast_longer"
                android:textColor="#444"
                android:textSize="20sp" />

        </LinearLayout>

    </FrameLayout>
</LinearLayout>